--- a/www/pages/templates/index.html
+++ b/www/pages/templates/index.html
@@ -10,7 +10,7 @@
 				<picture class="ptkdev">
                     <source srcset="/img/logo.webp" type="image/webp">
                     <source srcset="/img/logo.png" type="image/png">
-                    <img width="150" height="150" src="/img/logo.png" alt="Patryk Rzucidło (PTKDev)">
+                    <img width="150" height="150" src="/img/lazy.png" data-src="/img/logo.png"  alt="Patryk Rzucidło (PTKDev)" class="lazy">
                 </picture><br />
 				{{ translate.hello_world }}
 			</div>
