--- a/themes/default/css/skin-default.scss
+++ b/themes/default/css/skin-default.scss
@@ -68,4 +68,13 @@ body {
 	& .navbar-start a {
 		color: $bgcolor-light;
 	}
+
+	& .cookielaw {
+		background-color: #ffffff;
+	}
+
+	& .cookie-dismiss {
+		color: #ffffff;
+	    background-color: $color-light;
+	}
 }
