--- a/themes/default/css/main.scss
+++ b/themes/default/css/main.scss
@@ -4,6 +4,10 @@
 		color: #052A49;
 	}
 
+	& .fa-patreon {
+		color: #052A49;
+	}
+
 	& .is-patreon:hover {
 		color: #ffffff;
 	}
@@ -26,6 +30,18 @@
 
 	& .fa-chrome {
 		color: #27AE60;
+	}
+
+	& .fa-user-secret {
+		color: #333333;
+	}
+
+	& .fa-cookie-bite {
+		color: #51352D;
+	}
+
+	& .fa-life-ring {
+		color: #F7591A;
 	}
 
 	& svg.fa-github-alt {
