--- a/themes/default/css/main.scss
+++ b/themes/default/css/main.scss
@@ -44,6 +44,18 @@
 		color: #F7591A;
 	}
 
+	& .fa-globe-americas {
+		color: #3498DB;
+	}
+
+	& .fa-flag-usa {
+		color: #222954;
+	}
+
+	& .fa-flag-ita {
+		color: #009246;
+	}
+
 	& svg.fa-github-alt {
 		color: #333333;
 		height: 16px;
